# advent-of-code-2022

advent_of_code_common/: Cargo.toml
advent_of_code_common/src/: lib.rs
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
